# rpi/server/openapi_server/controllers/camera_controller.py
@@ -10,7 +10,7 @@ from openapi_server.models.camera_manual_focus_post_request import CameraManualF
 from openapi_server.models.lights_control_post200_response import LightsControlPost200Response  # noqa: E501
 from openapi_server import util
 
-from openapi_server.controllers.camera_controller_impl import camera_preview_start_impl, camera_preview_stop_impl
+from openapi_server.controllers.camera_controller_impl import camera_preview_start_impl, camera_preview_stop_impl, camera_preview_video_feed_get_impl
 
 
 def camera_autofocus_post(camera_autofocus_post_request):  # noqa: E501
@@ -89,3 +89,14 @@ def camera_preview_stop_post():  # noqa: E501
     :rtype: Union[LightsControlPost200Response, Tuple[LightsControlPost200Response, int], Tuple[LightsControlPost200Response, int, Dict[str, str]]
     """
     return camera_preview_stop_impl()
+
+
+def camera_preview_video_feed_get():  # noqa: E501
+    """Get MJPEG video feed
+
+    Streams MJPEG video feed from the camera # noqa: E501
+
+
+    :rtype: Union[file, Tuple[file, int], Tuple[file, int, Dict[str, str]]
+    """
+    return camera_preview_video_feed_get_impl()
